deploy: 8aa288466c446875dd66f7bd45c1c28ecd976bb6

--- a/_sources/advanced/apply_ufunc/dask_apply_ufunc.ipynb
+++ b/_sources/advanced/apply_ufunc/dask_apply_ufunc.ipynb
@@ -147,7 +147,7 @@
     "   choice if your function can handle dask arrays and won't compute the result unless \n",
     "   explicitly requested.\n",
     "2. `dask=\"parallelized\"`. This applies the user function over blocks of the dask\n",
-    "   array using `dask.array.blockwise`. This is useful when your function cannot\n",
+    "   array using `dask.array.apply_gufunc`. This is useful when your function cannot\n",
     "   handle dask arrays natively (e.g. scipy API)."
    ]
   },
