deploy: 67e13fbf23584cf1a23db7784acd707961dde7b7

--- a/_sources/advanced/apply_ufunc/complex-output-numpy.ipynb
+++ b/_sources/advanced/apply_ufunc/complex-output-numpy.ipynb
@@ -126,7 +126,7 @@
     "    newlat,  # 1st input to np.interp\n",
     "    air.lat,  # 2nd input to np.interp\n",
     "    air,  # 3rd input to np.interp\n",
-    "    input_core_dims=[[\"lat\"], [\"lat\"], [\"lat\"]],  # one entry per function input, 3 in total!\n",
+    "    input_core_dims=[[\"lat_interp\"], [\"lat\"], [\"lat\"]],  # one entry per function input, 3 in total!\n",
     "    output_core_dims=[[\"lat_interp\"]],\n",
     ")"
    ]
